crates/forge_app/src/snapshots/forge_app__operation__tests__attempt_completion_with_pending_tasks.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<user_message>Not all tasks are completed. Please continue with the next task. When you complete this task, mark it as done and then continue with the next task:
<task
  id="1"
  status="PENDING"
>First task
</task>
</user_message>
