crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_min_lines_but_max_line_length.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="1048"
  total_lines="50"
  display_lines="6-13"
  regex="search"
  file_pattern="*.txt"
><![CDATA[foo.txt:6:Match line 6: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:7:Match line 7: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:8:Match line 8: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:9:Match line 9: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:10:Match line 10: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:11:Match line 11: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:12:Match line 12: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
foo.txt:13:Match line 13: ABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABABAB
[Results truncated due to exceeding the 0.001MB size limit. Please use a more specific search pattern.]]]>
</search_results>
