crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_output.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="262144"
  total_lines="50"
  display_lines="6-30"
  regex="search"
  file_pattern="*.txt"
><![CDATA[foo.txt:6:Match line 6: Test
foo.txt:7:Match line 7: Test
foo.txt:8:Match line 8: Test
foo.txt:9:Match line 9: Test
foo.txt:10:Match line 10: Test
foo.txt:11:Match line 11: Test
foo.txt:12:Match line 12: Test
foo.txt:13:Match line 13: Test
foo.txt:14:Match line 14: Test
foo.txt:15:Match line 15: Test
foo.txt:16:Match line 16: Test
foo.txt:17:Match line 17: Test
foo.txt:18:Match line 18: Test
foo.txt:19:Match line 19: Test
foo.txt:20:Match line 20: Test
foo.txt:21:Match line 21: Test
foo.txt:22:Match line 22: Test
foo.txt:23:Match line 23: Test
foo.txt:24:Match line 24: Test
foo.txt:25:Match line 25: Test
foo.txt:26:Match line 26: Test
foo.txt:27:Match line 27: Test
foo.txt:28:Match line 28: Test
foo.txt:29:Match line 29: Test
foo.txt:30:Match line 30: Test
[Results truncated due to exceeding the 25 lines limit. Please use a more specific search pattern.]]]>
</search_results>
