crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_very_lengthy_one_line_match.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="1049"
  total_lines="1"
  display_lines="6-0"
  regex="search"
  file_pattern="*.txt"
><![CDATA[
[Results truncated due to exceeding the 1049 bytes size limit. Please use a more specific search pattern.]]]>
</search_results>
