crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_with_results.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="262144"
  total_lines="2"
  display_lines="1-2"
  regex="Hello"
  file_pattern="*.txt"
><![CDATA[file1.txt:1:Hello world
file2.txt:3:Hello universe]]>
</search_results>
