crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_all_done_tasks.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="3"
  pending_tasks="0"
  in_progress_tasks="0"
  done_tasks="3"
>
<task
  id="1"
  status="DONE"
><![CDATA[Complete feature A]]>
</task>
<task
  id="2"
  status="DONE"
><![CDATA[Write tests]]>
</task>
<task
  id="3"
  status="DONE"
><![CDATA[Update documentation]]>
</task>
</task_list>
