crates/forge_app/src/snapshots/forge_app__operation__tests__task_list_complex_scenario.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<task_list
  total_tasks="3"
  pending_tasks="2"
  in_progress_tasks="0"
  done_tasks="1"
>
<task
  id="2"
  status="PENDING"
><![CDATA[Fix bug in authentication]]>
</task>
<task
  id="3"
  status="DONE"
><![CDATA[Deploy to staging]]>
</task>
<task
  id="4"
  status="PENDING"
><![CDATA[Update API documentation]]>
</task>
</task_list>
